Header (part 1 of 3)

--- a/app/sass/components/_breadcrumbs.sass
+++ b/app/sass/components/_breadcrumbs.sass
@@ -30,7 +30,7 @@
 					&:hover
 						opacity: 0.75
 				&:hover
-					color: $primary
+					color: $yellow
 			> span
 				color: #8c8c8c
 				font-size: 15px
