--- a/app/sass/helpers/_variables.sass
+++ b/app/sass/helpers/_variables.sass
@@ -1,9 +1,10 @@
-$primary:    #F8CB2D
-$secondray:  #27AE60
-$text-100:   #2A2B2E
-$text-200:   #6F7278
+$yellow:     #F8CB2D
+$green:      #27AE60
+$blue:       #2F80ED
+$text-500:   #2A2B2E
+$text-400:   #6F7278
 $text-300:   #B0B4BB
-$text-400:   #DFE3E8
+$text-200:   #DFE3E8
 $warning:    #EB5757
 $white:      #FFF
 $border:     #F0F0F0
