--- a/app/sass/common/_base.sass
+++ b/app/sass/common/_base.sass
@@ -14,19 +14,19 @@
 			border-radius: 20px
 			border: 3px solid $white
 			&:hover
-				background-color: $primary
+				background-color: $yellow
 
 ::selection
-	background-color: rgba($primary, 0.05)
-	color: $black
+	background-color: $green
+	color: $white
 
 body
 	position: relative
 	min-width: 320px
-	color: $black
+	color: $text-500
 	font-family: $userfont
-	font-size: 16px
-	line-height: 1.5
+	font-size: 15px
+	line-height: 24px
 	&.lock-scroll
 		overflow: hidden
 		height: 100%
@@ -41,29 +41,43 @@ ul
 
 a
 	position: relative
-	color: $black
+	color: $text-500
 	transition: $trs
 	&:hover
-		color: $primary
+		color: $blue
 		text-decoration: none
-
-p
-	font-weight: 200
-	&:not(:first-of-type)
-		margin-bottom: 15px
 
 img
 	display: inline-block
 	max-width: 100%
 	height: auto
 
-h1, h2, h3, h4, h5, h6
-	color: $black
+h1
+	font-size: 34px
 	font-weight: $w-bold
-	line-height: 1.25
-	> span
-		-webkit-text-fill-color: $trsp
-		-webkit-text-stroke: 1px $primary
+	line-height: 40px
+	+media-breakpoint-down(sm)
+		font-size: 24px
+		line-height: 32px
+h2
+	font-size: 27px
+	font-weight: $w-bold
+	line-height: 32px
+	+media-breakpoint-down(sm)
+		font-size: 20px
+		line-height: 24px
+h3
+	font-size: 22px
+	font-weight: $w-bold
+	line-height: 32px
+h4
+	font-size: 18px
+	font-weight: $w-medium
+	line-height: 24px
+h5, h6
+	font-size: 12px
+	font-weight: $w-bold
+	line-height: 16px
 
 hr
 	display: block
