--- a/app/sass/common/_typography.sass
+++ b/app/sass/common/_typography.sass
@@ -3,36 +3,38 @@
 /* ==========================================================================
 	 Font Weights
 	 ========================================================================== */
-.w-thin
-	font-weight: 100
-.w-light
-	font-weight: 200
-.w-book
-	font-weight: 300
 .w-regular
 	font-weight: 400
 .w-medium
 	font-weight: 500
-.w-semibold
-	font-weight: 600
 .w-bold
 	font-weight: 700
-.w-bolder
-	font-weight: 800
-.w-black
-	font-weight: 900
 
 
 /* ==========================================================================
 	 Font sizes
 	 ========================================================================== */
 .text-xl
-	font-size: 30px
+	font-size: 34px
+	line-height: 40px
+	+media-breakpoint-down(sm)
+		font-size: 24px
+		line-height: 32px
 .text-lg
-	font-size: 26px
+	font-size: 27px
+	line-height: 32px
+	+media-breakpoint-down(sm)
+		font-size: 20px
+		line-height: 24px
 .text-md
 	font-size: 22px
+	line-height: 32px
 .text-sm
 	font-size: 18px
+	line-height: 24px
 .text-xs
-	font-size: 14px
+	font-size: 15px
+	line-height: 24px
+.text-xxs
+	font-size: 13px
+	line-height: 16px
