--- a/app/sass/components/_forms.sass
+++ b/app/sass/components/_forms.sass
@@ -4,16 +4,15 @@
 	 Base customize for forms
 	 ========================================================================== */
 ::placeholder
-	color: #000
-	text-transform: lowercase
+	color: $text-400
 
 input, textarea
 	outline: none
 	font-family: $userfont
-	&:focus:required:invalid
-		border-color: red
-	&:required:valid
-		border-color: accent
+	// &:focus:required:invalid
+	// 	border-color: red
+	// &:required:valid
+	// 	border-color: $green
 
 .form
 	position: relative
@@ -27,24 +26,21 @@ input, textarea
 		appearance: none
 		display: block
 		width: 100%
-		margin-bottom: 20px
-		color: $black
-		font-size: 16px
+		color: $text-500
+		font-size: 15px
 		font-weight: $w-regular
-		border-radius: 0
-		border: 1px solid #6A6A6A
-		background-color: $trsp
+		border-radius: 4px
+		border: 1px solid $text-200
+		background-color: $white
 		background-clip: padding-box
-		color: $black
 		transition: border-color .3s ease-in-out, box-shadow .3s ease-in-out, background-color .3s ease-in-out
 		&:focus
-			box-shadow: 0 0 0 1px $primary
-			border-color: $primary
-			background-color: $white
+			box-shadow: 0 0 0 3px rgba($yellow, 0.25)
 	&-control
-		height: 60px
-		padding: 0 32px
-		line-height: 60px
+		height: 64px
+		padding-left: 16px
+		padding-right: 16px
+		line-height: 64px
 		&--number
 			-moz-appearance: textfield
 			&::-webkit-outer-spin-button,
@@ -54,3 +50,22 @@ input, textarea
 	&-textarea
 		resize: none
 		padding: 8px 16px
+
+// Search form
+.form-search
+	display: flex
+	align-items: center
+	.form-control,
+	.form-submit
+		height: 48px
+	.form-control
+		border-radius: 4px 0 0 4px
+		border-right: 0
+		background-color: #F9F9F9
+		&:focus
+			background-color: $white
+	.form-submit
+		flex: 0 0 auto
+		width: 48px
+		padding: 0
+		border-radius: 0 4px 4px 0
