--- a/app/sass/components/_dropdown.sass
+++ b/app/sass/components/_dropdown.sass
@@ -11,7 +11,7 @@
 		padding: 12px
 		border-radius: 8px
 		border: 0
-		box-shadow: 0px 9px 27px rgba(176, 190, 197, 0.82), 0px 3px 6px rgba(176, 190, 197, 0.32)
+		box-shadow: $box-shadow
 		&::before
 			content: ''
 			position: absolute
