--- a/app/sass/components/_forms.sass
+++ b/app/sass/components/_forms.sass
@@ -26,14 +26,14 @@ input, textarea
 		appearance: none
 		display: block
 		width: 100%
-		color: $text-500
-		font-size: 15px
-		font-weight: $w-regular
 		border-radius: 4px
 		border: 1px solid $text-200
 		background-color: $white
 		background-clip: padding-box
-		transition: border-color .3s ease-in-out, box-shadow .3s ease-in-out, background-color .3s ease-in-out
+		color: $text-500
+		font-size: 15px
+		font-weight: $w-regular
+		transition: border-color .2s ease-in-out, box-shadow .2s ease-in-out, background-color .3s ease-in-out
 		&:focus
 			box-shadow: 0 0 0 3px rgba($yellow, 0.25)
 	&-control
@@ -50,6 +50,39 @@ input, textarea
 	&-textarea
 		resize: none
 		padding: 8px 16px
+
+.form-group-label
+	position: relative
+	input::placeholder
+		opacity: 0
+	input:not(:placeholder-shown)
+		padding-top: 28px
+	input, label
+		height: 48px
+		padding: .75rem
+	input:not(:placeholder-shown) ~ label
+		padding-top: 3px
+		padding-bottom: 3px
+		font-size: 12px
+		color: $text-300
+	label
+		cursor: text
+		pointer-events: none
+		position: absolute
+		top: 0
+		left: 0
+		display: block
+		width: 100%
+		margin-bottom: 0
+		border: 1px solid transparent
+		border-radius: .25rem
+		color: $text-400
+		line-height: 1.5
+		transition: all .1s ease-in-out
+	input, label
+		height: 3.125rem
+		padding: .75rem
+
 
 // Search form
 .form-search
