--- a/app/sass/helpers/_variables.sass
+++ b/app/sass/helpers/_variables.sass
@@ -9,11 +9,12 @@ $warning:    #EB5757
 $white:      #FFF
 $border:     #F0F0F0
 $background: #F8FAFF
-$trsp:       transparent
-$userfont:   'Inter', sans-serif
-$systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif
-$lineheight: 1.5
-$trs:        .3s ease
+$box-shadow:   0px 9px 27px rgba(176, 190, 197, 0.82), 0px 3px 6px rgba(176, 190, 197, 0.32)
+$trsp:         transparent
+$userfont:     'Inter', sans-serif
+$systemfont:   -apple-system, BlinkMacSystemFont, Arial, sans-serif
+$lineheight:   1.5
+$trs:          .3s ease
 
 // Font weights
 $w-regular: 400
