Header (part 3 of 3). Styled product card. Working. Home page (sections 4 of 12)

--- a/app/sass/common/_base.sass
+++ b/app/sass/common/_base.sass
@@ -46,6 +46,10 @@ a
 	&:hover
 		color: $blue
 		text-decoration: none
+	&.blue-link
+		color: $blue
+		&:hover
+			text-decoration: underline
 
 img
 	display: inline-block
