--- a/app/sass/components/_quantity.sass
+++ b/app/sass/components/_quantity.sass
@@ -36,10 +36,10 @@
 	&-minus
 		border-radius: 5px 0 0 5px
 		border-right: 0
-		color: #EB5757
+		color: $warning
 		&:hover
-			border-color: #EB5757
-			background-color: #EB5757
+			border-color: $warning
+			background-color: $warning
 			color: $white
 	&-plus
 		border-radius: 0 5px 5px 0
