--- a/app/sass/components/_buttons.sass
+++ b/app/sass/components/_buttons.sass
@@ -51,7 +51,7 @@
 		border-color: $text-200
 		background-color: $white
 		&:hover
-			background-color: rgba($text-200, .5)
+			background-color: lighten($text-200, 7%)
 		&:focus
 			background-color: $white
 
@@ -120,3 +120,50 @@
 			text-align: center
 	&.btn-shopping-cart
 		color: $green
+	
+	// Add to cart button
+	&.btn-cart
+		padding-left: 30px
+		padding-right: 30px
+		font-weight: $w-medium
+		white-space: normal
+		text-align: left
+		&--added
+			border: 2px solid $green
+			background-color: $white
+			&:hover,
+			&:focus
+				box-shadow: none
+				background-color: $white
+			.before-added
+				display: none
+			.after-added
+				display: flex
+				align-items: center
+				.icon
+					flex: 0 0 auto
+					fill: $green
+					width: 16px
+					height: 16px
+				span
+					margin-left: 12px
+					color: $text-500
+					@include font-size(xxs)
+					font-weight: $w-regular
+					> a
+						color: $green
+						font-weight: $w-bold
+						&:hover
+							text-decoration: underline
+		&:not(.btn-cart--added)
+			.before-added
+				display: block
+			.after-added
+				display: none
+
+	// Quick buy button
+	&.btn-quick-buy
+		margin-top: 8px
+		width: 100%
+		font-size: 15px
+		color: #219653
