--- a/app/sass/components/_forms.sass
+++ b/app/sass/components/_forms.sass
@@ -14,13 +14,12 @@ input, textarea
 	// &:required:valid
 	// 	border-color: $green
 
+label
+	cursor: pointer
+
+
 .form
 	position: relative
-	&-label
-		margin-bottom: 12px
-		color: $black
-		font-size: 15px
-		cursor: pointer
 	&-control,
 	&-textarea
 		appearance: none
@@ -47,49 +46,112 @@ input, textarea
 			&::-webkit-inner-spin-button
 				-webkit-appearance: none
 				margin: 0
+
+	// Textarea
 	&-textarea
 		resize: none
 		padding: 8px 16px
 
-.form-group-label
-	position: relative
-	input::placeholder
-		opacity: 0
-	input:not(:placeholder-shown)
-		padding-top: 28px
-	input, label
-		height: 48px
-		padding: .75rem
-	input:not(:placeholder-shown) ~ label
-		padding-top: 3px
-		padding-bottom: 3px
-		font-size: 12px
-		color: $text-300
-	label
-		cursor: text
-		pointer-events: none
-		position: absolute
-		top: 0
-		left: 0
-		display: block
-		width: 100%
-		margin-bottom: 0
-		border: 1px solid transparent
-		border-radius: .25rem
-		color: $text-400
-		line-height: 1.5
-		transition: all .1s ease-in-out
-	input, label
-		height: 3.125rem
-		padding: .75rem
+	// Checkbox
+	&-checkbox
+		position: relative
+		input[type="checkbox"]
+			position: absolute
+			top: 0
+			left: 3px
+			opacity: 0
+		&-label
+			user-select: none
+			position: relative
+			display: block
+			margin-bottom: 10px
+			padding-left: 28px
+			color: $text-500
+			@include font-size(xs)
+			&::before,
+			&::after
+				content: ''
+				position: absolute
+				top: 0
+				left: 0
+				width: 24px
+				height: 24px
+				border-radius: 2px
+				border: 1px solid $text-200
+				background-color: $white
+				transition: border .3s ease, opacity .15s ease
+			&::after
+				background: url('../images/dist/icons/checked.svg') no-repeat center/14px
+				opacity: 0
+			&:hover
+				&::before,
+				&::after
+					border-color: $green
+		input:checked + label::after
+			opacity: 1
+
+	// Form group
+	&-group
+		.switch-input-mask
+			margin-top: 10px
+			.form-checkbox-label
+				margin-bottom: 0
+				padding-left: 25px
+				color: $text-400
+				@include font-size(xxs)
+				&::before,
+				&::after
+					width: 16px
+					height: 16px
+					border-radius: 2px
+				&::after
+					background-size: 10px
+
+	// Form group label
+	&-group-label
+		position: relative
+		input::placeholder
+			opacity: 0
+		input:not(:placeholder-shown)
+			padding-top: 40px
+			& ~ label
+				padding-top: 8px
+				padding-bottom: 8px
+				font-size: 12px
+		input, label
+			height: 64px
+			padding: 20px
+		label
+			cursor: text
+			pointer-events: none
+			position: absolute
+			top: 0
+			left: 0
+			display: block
+			width: 100%
+			margin-bottom: 0
+			border: 1px solid transparent
+			color: $text-400
+			font-size: 15px
+			line-height: 1.5
+			transition: all .1s ease-in-out
 
 
 // Search form
 .form-search
 	display: flex
 	align-items: center
+	.form-group-label
+		input:not(:placeholder-shown)
+			padding-top: 28px
+			& ~ label
+				padding-top: 3px
+				padding-bottom: 3px
+		input, label
+			height: 48px
+			padding: .75rem
 	.form-control,
-	.form-submit
+	.btn-submit
 		height: 48px
 	.form-control
 		border-radius: 4px 0 0 4px
@@ -97,7 +159,7 @@ input, textarea
 		background-color: #F9F9F9
 		&:focus
 			background-color: $white
-	.form-submit
+	.btn-submit
 		flex: 0 0 auto
 		width: 48px
 		padding: 0
