--- a/app/sass/components/_images.sass
+++ b/app/sass/components/_images.sass
@@ -1,6 +1,11 @@
-.img-cover
+.img-cover,
+.img-scale
 	overflow: hidden
 	img
 		width: 100%
 		height: 100%
-		object-fit: cover
+
+.img-cover
+	object-fit: cover
+.img-scale
+	object-fit: scale-down
