--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -135,7 +135,6 @@
 				height: 0
 				margin-top: 16px
 				opacity: 0
-				will-change: transform
 				transform: translate3d(0, 10px, 0)
 				transition: $trs
 				&._is-opened
@@ -180,7 +179,6 @@
 						> a
 							display: inline-flex
 							align-items: center
-							color: $blue
 							@include font-size(xs)
 							&:hover
 								color: $green
@@ -222,7 +220,7 @@
 											font-weight: $w-bold
 											text-decoration: none
 										del
-											color: #EB5757
+											color: $warning
 											@include font-size(xxs)
 
 		// Contacts
@@ -295,6 +293,7 @@
 						font-size: 12px
 						font-weight: $w-bold
 						line-height: 16px
+						text-transform: uppercase
 			
 			// Widget
 			.wishlist,
@@ -384,7 +383,7 @@
 								font-weight: $w-bold
 								text-decoration: none
 							del
-								color: #EB5757
+								color: $warning
 								@include font-size(xxs)
 						&-delete
 							position: absolute
@@ -393,7 +392,7 @@
 							color: $text-300
 							font-size: 18px
 							&:hover
-								color: #EB5757
+								color: $warning
 					.subtotal
 						margin-bottom: 20px
 						text-align: right
@@ -428,6 +427,7 @@
 				right: 12px
 				z-index: 8
 				margin-top: 8px
+				padding-bottom: 16px
 				background-color: $white
 				opacity: 0
 				transition: $trs
@@ -479,11 +479,12 @@
 						content: ''
 						position: absolute
 						top: 0
-						left: -20px
+						right: 100%
+						z-index: -1
 						display: block
-						width: 20px
+						width: 230px
 						height: 100%
-						background-color: $trsp
+						background-color: $white
 					.menu-title
 						color: $text-300
 					.menu-grid
