--- a/app/sass/modules/_section.sass
+++ b/app/sass/modules/_section.sass
@@ -1,2 +1,21 @@
 .section
 	position: relative
+	&-heading
+		position: relative
+		text-align: center
+		&::before
+			content: ''
+			position: absolute
+			top: 50%
+			display: block
+			width: 100%
+			height: 1px
+			border-top: 1px solid $text-200
+			transform: translateY(-50%)
+		.title
+			position: relative
+			display: inline-block
+			margin-bottom: 0
+			padding-left: 16px
+			padding-right: 16px
+			background-color: $white
