--- a/app/sass/components/_cards.sass
+++ b/app/sass/components/_cards.sass
@@ -6,12 +6,19 @@
 .card
 	position: relative
 	height: 100%
+	min-width: 0
 
 
 /* ==========================================================================
 	 Product card
 	 ========================================================================== */
+.products-slider
+	.card-product::before,
+	.card-attributes
+		display: none
+
 .card-product
+	min-width: 0
 	z-index: 1
 	padding-top: 16px
 	background-color: $white
@@ -25,9 +32,11 @@
 		z-index: -1
 		margin: -16px
 		border: 1px solid $text-200
+		border-bottom: 0
 		opacity: 0
 		transition: opacity .15s ease
 	&:hover
+		z-index: 2
 		&::before
 			opacity: 1
 		.card-label
@@ -123,11 +132,11 @@
 				right: 0
 				bottom: 0
 				z-index: 1
-				padding-top: 16px
+				padding-top: 10px
 				padding-bottom: 2px
 				margin: auto
-				max-width: 100%
-				max-height: 100%
+				width: 100%
+				height: 100%
 				object-fit: scale-down
 				opacity: 0
 				transform: scale(1.01)
@@ -140,12 +149,12 @@
 	
 	// Card photo (base state)
 	.card-photo
-		overflow: hidden
-		height: 154px
-		border-radius: 5px
+		display: block
+		height: 164px
 		img
 			width: 100%
 			height: 100%
+			padding-top: 10px
 			object-fit: scale-down
 			transform: scale(1.01)
 			transition: transform .3s ease
@@ -177,7 +186,9 @@
 				background-color: $text-300
 		// Permalink
 		.permalink
+			overflow: hidden
 			display: block
+			height: 60px
 			font-size: 15px
 			line-height: 20px
 		.price
@@ -197,6 +208,8 @@
 	
 	// Card buttons (Compare, Wishlist, Add to cart)
 	.card-buttons
+		display: flex
+		flex-direction: column
 		margin-top: 16px
 		&-group
 			margin-bottom: 8px
@@ -211,6 +224,10 @@
 				padding-right: 0
 				color: $text-300
 				line-height: 40px
+				&._added
+					border-color: $trsp
+					background-color: $yellow
+					color: $text-500
 				&:not(:first-child)
 					border-top-left-radius: 0
 					border-bottom-left-radius: 0
@@ -222,11 +239,14 @@
 					background-color: $yellow
 					border-color: $trsp
 					color: $text-500
+				&:active
+					box-shadow: 0 0 0 4px rgba($yellow, 0.25)
+					background-color: lighten($yellow, 8%)
+					color: $text-500
 				&:focus
 					z-index: 1
-					box-shadow: 0 0 0 4px rgba($yellow, 0.25)
 		.btn-cart
-			width: 100%
+			// width: 100%
 
 	// Card attributes
 	.card-attributes
