--- a/app/sass/modules/_section.sass
+++ b/app/sass/modules/_section.sass
@@ -1,5 +1,16 @@
 .section
 	position: relative
+	
+	&-blue
+		padding-top: 48px
+		padding-bottom: 48px
+		background-color: $background
+		.section-heading
+			&::before
+				display: none
+			.title
+				background-color: $trsp
+
 	&-heading
 		position: relative
 		text-align: center
