Home page (sections 12 of 12). Footer completed.

--- a/app/sass/common/_typography.sass
+++ b/app/sass/common/_typography.sass
@@ -1,6 +1,17 @@
 @import '../helpers/helpers'
 
 /* ==========================================================================
+	 Text aligns
+	 ========================================================================== */
+.text-left
+	text-align: left
+.text-center
+	text-align: center
+.text-right
+	text-align: right
+
+
+/* ==========================================================================
 	 Font Weights
 	 ========================================================================== */
 .w-regular
