--- a/app/sass/modules/_footer.sass
+++ b/app/sass/modules/_footer.sass
@@ -1,2 +1,162 @@
+// Section: Questions left?
+.f-questions
+	&-descr
+		color: $text-400
+	&-form
+		display: flex
+		max-width: 760px
+		margin: 0 auto
+
+
+// Site footer
 .footer
 	position: relative
+	background-color: $text-500
+	color: $text-400
+
+	&-main
+		padding-top: 32px
+		padding-bottom: 75px
+
+	&-title
+		margin-bottom: 24px
+		color: $text-400
+		font-size: 12px
+		font-weight: $w-bold
+		line-height: 16px
+		text-transform: uppercase
+
+	// Subscribe
+	&-subscribe
+		padding-top: 16px
+		padding-bottom: 16px
+		border-bottom: 1px solid rgba($white, 0.05)
+		.subscribe
+			display: flex
+			align-items: center
+			&-heading
+				.title
+					margin-bottom: 4px
+				.descr
+					margin-bottom: 0
+			&-form
+				margin-left: 90px
+				flex: 1 1 auto
+				.form-control
+					border: none
+					background-color: #37383D
+					color: $white
+					&:focus
+						box-shadow: 0 0 0 2px $yellow
+
+	// Intro
+	&-intro
+		.logo
+			max-width: 200px
+			.descr
+				margin-top: 12px
+				margin-bottom: 0
+		.payments,
+		.yandex-market
+			margin-top: 28px
+			&-title
+				margin-bottom: 8px
+
+	// Contacts
+	&-contacts
+		padding-left: 24px
+		.phone
+			> div:not(:last-child)
+				margin-bottom: 8px
+			a
+				display: inline-flex
+				align-items: center
+				color: $text-300
+				@include font-size(md)
+				> i:first-child
+					margin-left: 8px
+				.viber,
+				.whatsapp
+					user-select: none
+					flex: 0 0 auto
+					display: inline-block
+					margin-left: 2px
+					background-repeat: no-repeat
+					background-size: 100%
+					background-position: center
+					font-style: normal
+				.viber
+					width: 24px
+					height: 24px
+					background-image: url('../images/dist/icons/viber-dark.svg')
+				.whatsapp
+					width: 24px
+					height: 24px
+					background-image: url('../images/dist/icons/whatsapp.svg')
+				&:hover
+					color: $yellow
+		.email
+			margin-top: 20px
+			a
+				color: $text-300
+				&:hover
+					color: $yellow
+		.social
+			margin-top: 20px
+			&-title
+				margin-bottom: 10px
+				color: $text-300
+			&-list
+				display: flex
+				align-items: center
+				> a
+					display: flex
+					align-items: center
+					justify-content: center
+					width: 48px
+					height: 48px
+					border-radius: 50%
+					border: 1px solid rgba($white, 0.05)
+					color: $text-300
+					font-size: 32px
+					line-height: 1
+					&:not(:last-child)
+						margin-right: 16px
+					&:hover
+						color: $yellow
+
+	// Adress
+	&-adress
+		padding-left: 40px
+		p
+			max-width: 200px
+			color: $text-300
+			&:not(:last-child)
+				margin-bottom: 16px
+
+	// Navigation
+	&-nav
+		&-list
+			> li
+				&:not(:last-child)
+					margin-bottom: 8px
+				> a
+					display: inline-block
+					color: $text-300
+					&:hover
+						color: $yellow
+
+	// Copyright
+	&-copyright
+		.copyright
+			&-top
+				padding-top: 10px
+				padding-bottom: 10px
+			&-bottom
+				padding-top: 16px
+				padding-bottom: 32px
+				border-top: 1px solid rgba($white, 0.05)
+			&-top,
+			&-bottom
+				.text
+					margin-bottom: 0
