--- a/app/sass/common/_base.sass
+++ b/app/sass/common/_base.sass
@@ -31,6 +31,9 @@ body
 		overflow: hidden
 		height: 100%
 
+*
+	box-sizing: border-box
+
 figure
 	margin: 0
 
@@ -67,7 +70,6 @@ img
 	display: inline-block
 	max-width: 100%
 	height: auto
-	box-sizing: border-box
 
 h1
 	font-size: 34px
