--- a/app/sass/components/_images.sass
+++ b/app/sass/components/_images.sass
@@ -5,7 +5,7 @@
 		width: 100%
 		height: 100%
 
-.img-cover
+.img-cover img
 	object-fit: cover
-.img-scale
+.img-scale img
 	object-fit: scale-down
