--- a/app/sass/modules/_article.sass
+++ b/app/sass/modules/_article.sass
@@ -1,30 +1,40 @@
 article
-	h1, h2, h3, h4, h5, h6
-		margin-bottom: 20px
-		font-size: 22px
-		font-weight: 500
+	margin-bottom: -32px
 
+	h1, h2, h3, h4, h5, h6,
 	p,
 	img,
 	ul,
 	ol,
 	blockquote, table
-		margin-bottom: 10px
+		margin-bottom: 32px
 
 	b,
 	strong
-		font-weight: 500
+		font-weight: $w-bold
 
 	p,
 	ul > li,
 	ul > li > a
-		font-size: 16px
-		+media-breakpoint-down(xs)
-			font-size: 15px
+		@include font-size(xs)
 
 	a
-		color: $black
-		font-size: 16px
-		font-weight: 500
+		color: $blue
 		&:hover
-			color: $yellow
+			text-decoration: underline
+
+	ul
+		> li
+			display: flex
+			position: relative
+			&:not(:last-child)
+				margin-bottom: 16px
+			&::before
+				content: ''
+				flex: 0 0 auto
+				display: block
+				width: 40px
+				height: 40px
+				margin-right: 16px
+				border-radius: 50%
+				background: $yellow url('../images/dist/icons/checked-dark.svg') no-repeat center/14px
