--- a/app/sass/pages/home.sass
+++ b/app/sass/pages/home.sass
@@ -110,16 +110,6 @@
 		padding: 24px
 		border-radius: 8px
 		background-color: $background
-	&-form
-		display: flex
-		.form-group
-			width: 100%
-			margin-right: 16px
-		.form-control:focus
-			box-shadow: 0 0 0 1px $text-200
-		.btn-submit
-			padding-left: 16px
-			padding-right: 16px
 
 // Section: Popular categories
 .h-categories
@@ -219,3 +209,57 @@
 		background-color: $white
 		img
 			padding: 16px 24px
+
+// Section: Partners
+.h-trust
+	&-wrapper
+		display: flex
+		margin-left: -40px
+		margin-right: -40px
+	&-col
+		flex: 0 0 50%
+		max-width: 50%
+		padding-left: 40px
+		padding-right: 40px
+	&-clients,
+	&-certificates
+		display: flex
+		flex-wrap: wrap
+		&-item
+			position: relative
+			flex: 0 0 16.66667%
+			max-width: 16.66667%
+	&-clients
+		margin: -12px -24px
+		&-item
+			padding: 12px 24px
+			filter: grayscale(1)
+			transition: filter .3s ease
+			&:hover
+				filter: none
+	&-certificates
+		margin: -12px -20px
+		&-item
+			padding: 12px 20px
+			&::before
+				content: ''
+				position: absolute
+				top: 0
+				left: 0
+				right: 0
+				bottom: 0
+				z-index: 1
+				display: block
+				border-radius: 4px
+				background: rgba($text-400, 0.3) url('../images/dist/icons/plus-circle.svg') no-repeat center/32px
+				opacity: 0
+				transition: opacity .3s ease
+			&:hover
+				&::before
+					opacity: 1
+			> div
+				position: relative
+				height: 100%
+				border-radius: 4px
+				border: 1px solid $text-200
+				background-color: $white
